force-app/main/default/objects/Completion_Form_Template__c/Completion_Form_Template__c.object-meta.xml
<CustomObject>
    <description>This object is used to configure the completion forms by Vendor. (PVFSL-603)</description>
    <label>Completion Form Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Completion Form Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>