force-app/main/default/objects/Completion_Form_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The form is only available if this checkbox is TRUE. (PVFSL-603)</description>
    <inlineHelpText>The form is only available if this checkbox is TRUE.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>