force-app/main/default/objects/Completion_Form_Template__c/fields/Location_Products_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Location_Products_Consumed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, then the location field will be available when adding products consumed. (PVFSL-603)</description>
    <inlineHelpText>If true, then the location field will be available when adding products consumed.</inlineHelpText>
    <label>Location on Products Consumed</label>
    <type>Checkbox</type>
</CustomField>