force-app/main/default/objects/Completion_Form_Template__c/fields/Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Section_Order__c</fullName>
    <description>This field displays all the sections in order separated by a semicolon. For example, the text “General;Extra“ would display the “General“ section first and an “Extra“ section second. (PVFSL-603)</description>
    <inlineHelpText>This field displays all the sections in order separated by a semicolon. For example, the text “General;Extra“ would display the “General“ section first and an “Extra“ section second.</inlineHelpText>
    <label>Section Order</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>