force-app/main/default/objects/Completion_Form_Template__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>This field identifies the Vendors that will use this form. Each vendor should have only one Completion form assigned. (PVFSL-603)</description>
    <inlineHelpText>This field identifies the Vendors that will use this form. Each vendor should have only one Completion form assigned.</inlineHelpText>
    <label>Vendor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FSL_Vendors</valueSetName>
    </valueSet>
</CustomField>