force-app/main/default/objects/Completion_Form_Template__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Completion Form Templates</relationshipLabel>
    <relationshipName>Completion_Form_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>