force-app/main/default/objects/Completion_Form_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Work_Type__c</columns>
    <columns>Section_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>